# PicoAirgage

./: CMakeLists.txt  main.c
.github/workflows/: cmake.yml
content/: encode_all_images.ps1
content/Fonts/: Hoshi.h
content/Planes/: plane_sprites.h
hid/: game_input.h  hid.h
sprite/: CMakeLists.txt  dma_buffer.h  sprite_dma.c
